# odooshow

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
odooshow/: __init__.py  odooshow.py
tests/: local_tests.py  test_odooshow.py
